src/test/fail/basic_syntax/condition_without_value.lly
#[
SyntaxError: Conditional expression has no value.
Where: File "condition_without_value.lly" at line 7
]#

define f() {}
if f():
    f()
